--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -48,18 +48,63 @@
         <scene sceneID="CsV-9e-Y8I">
             <objects>
                 <tableViewController id="E4b-jM-2Sw" customClass="HomeTableViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="NLi-7o-SRQ">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="1" id="NLi-7o-SRQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="5eH-V1-u2g">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="138" id="5eH-V1-u2g" customClass="TweetCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="138"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5eH-V1-u2g" id="dXQ-Eb-wep">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="137.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nyt-w4-i2d">
+                                            <rect key="frame" x="20" y="15" width="40" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="40" id="40S-SC-Xfi"/>
+                                                <constraint firstAttribute="width" constant="40" id="8KU-VD-0RR"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="De9-IQ-1rC">
+                                            <rect key="frame" x="68" y="15" width="50.5" height="21.5"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="screenname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w9e-LZ-EnQ">
+                                            <rect key="frame" x="126.5" y="17" width="89" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tweet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i41-9u-Z2u">
+                                            <rect key="frame" x="68" y="44.5" width="36" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Nyt-w4-i2d" firstAttribute="leading" secondItem="dXQ-Eb-wep" secondAttribute="leadingMargin" constant="4" id="405-kQ-YF2"/>
+                                        <constraint firstItem="De9-IQ-1rC" firstAttribute="top" secondItem="dXQ-Eb-wep" secondAttribute="topMargin" constant="4" id="G4B-vp-JxX"/>
+                                        <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="i41-9u-Z2u" secondAttribute="bottom" constant="8" id="L05-UU-E57"/>
+                                        <constraint firstItem="w9e-LZ-EnQ" firstAttribute="firstBaseline" secondItem="De9-IQ-1rC" secondAttribute="firstBaseline" id="UHm-Lq-DiP"/>
+                                        <constraint firstItem="i41-9u-Z2u" firstAttribute="leading" secondItem="Nyt-w4-i2d" secondAttribute="trailing" constant="8" id="VUG-Pf-bf3"/>
+                                        <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="i41-9u-Z2u" secondAttribute="trailing" constant="8" id="Y1I-4c-eBW"/>
+                                        <constraint firstItem="Nyt-w4-i2d" firstAttribute="top" secondItem="dXQ-Eb-wep" secondAttribute="topMargin" constant="4" id="bUW-wG-Sr6"/>
+                                        <constraint firstItem="i41-9u-Z2u" firstAttribute="top" secondItem="De9-IQ-1rC" secondAttribute="bottom" constant="8" id="f1m-fY-dqz"/>
+                                        <constraint firstItem="w9e-LZ-EnQ" firstAttribute="leading" secondItem="De9-IQ-1rC" secondAttribute="trailing" constant="8" id="jRw-F8-4By"/>
+                                        <constraint firstItem="De9-IQ-1rC" firstAttribute="leading" secondItem="Nyt-w4-i2d" secondAttribute="trailing" constant="8" id="p88-qW-Pqe"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImageView" destination="Nyt-w4-i2d" id="gmB-Gw-Jkz"/>
+                                    <outlet property="screenNameLabel" destination="w9e-LZ-EnQ" id="s9s-tq-o1K"/>
+                                    <outlet property="tweetContent" destination="i41-9u-Z2u" id="8Lu-A2-a9Y"/>
+                                    <outlet property="userNameLabel" destination="De9-IQ-1rC" id="3KW-Mz-EEP"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -78,7 +123,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RER-ay-aec" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="842" y="-743"/>
+            <point key="canvasLocation" x="840.79999999999995" y="-743.47826086956525"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="hK5-bl-WBz">
