--- a/Twitter/Storyboards/Base.lproj/Main.storyboard
+++ b/Twitter/Storyboards/Base.lproj/Main.storyboard
@@ -18,25 +18,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1oc-pW-uRw">
-                                <rect key="frame" x="129.5" y="300.5" width="116" height="66"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="45"/>
-                                <state key="normal" title="Login">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="onLoginButton:" destination="m0e-jb-jUo" eventType="touchUpInside" id="J3C-mI-6RW"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SQB-3O-JiB">
+                                <rect key="frame" x="107.5" y="288.5" width="160.5" height="90"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1oc-pW-uRw">
+                                        <rect key="frame" x="0.0" y="0.0" width="160.5" height="90"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="90" id="J8q-40-JBW"/>
+                                            <constraint firstAttribute="width" secondItem="1oc-pW-uRw" secondAttribute="height" multiplier="107:60" id="dwo-sz-HL7"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="40"/>
+                                        <state key="normal" title="Login">
+                                            <color key="titleColor" red="0.22797456383705139" green="0.63336116075515747" blue="0.95047610998153687" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onLoginButton:" destination="m0e-jb-jUo" eventType="touchUpInside" id="J3C-mI-6RW"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="1oc-pW-uRw" secondAttribute="trailing" id="9mN-8Q-vQ8"/>
+                                    <constraint firstItem="1oc-pW-uRw" firstAttribute="centerX" secondItem="SQB-3O-JiB" secondAttribute="centerX" id="MsR-Wb-O0B"/>
+                                    <constraint firstAttribute="bottom" secondItem="1oc-pW-uRw" secondAttribute="bottom" id="VH6-hM-Gf9"/>
+                                    <constraint firstItem="1oc-pW-uRw" firstAttribute="leading" secondItem="SQB-3O-JiB" secondAttribute="leading" id="i8V-KP-Ojf"/>
+                                    <constraint firstItem="1oc-pW-uRw" firstAttribute="centerY" secondItem="SQB-3O-JiB" secondAttribute="centerY" id="mSL-4d-5xf"/>
+                                    <constraint firstItem="1oc-pW-uRw" firstAttribute="top" secondItem="SQB-3O-JiB" secondAttribute="top" id="zv3-DZ-JaR"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TwitterLogo" translatesAutoresizingMaskIntoConstraints="NO" id="rDJ-S8-eTr">
+                                <rect key="frame" x="127.5" y="138.5" width="120" height="120"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.2251579165" green="0.63001710180000003" blue="0.95047801730000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="1oc-pW-uRw" firstAttribute="centerY" secondItem="tVq-hK-UL4" secondAttribute="centerY" id="atL-v2-UeJ"/>
-                            <constraint firstItem="1oc-pW-uRw" firstAttribute="centerX" secondItem="tVq-hK-UL4" secondAttribute="centerX" id="dTq-M8-0Cg"/>
+                            <constraint firstItem="SQB-3O-JiB" firstAttribute="centerY" secondItem="tVq-hK-UL4" secondAttribute="centerY" id="Jri-lC-PhO"/>
+                            <constraint firstItem="1oc-pW-uRw" firstAttribute="top" secondItem="rDJ-S8-eTr" secondAttribute="bottom" constant="30" id="h88-ab-FqO"/>
+                            <constraint firstItem="SQB-3O-JiB" firstAttribute="centerX" secondItem="tVq-hK-UL4" secondAttribute="centerX" id="oES-f3-DgY"/>
+                            <constraint firstItem="rDJ-S8-eTr" firstAttribute="centerX" secondItem="tVq-hK-UL4" secondAttribute="centerX" id="zff-On-ciW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="C2E-2A-ysM"/>
                     </view>
                     <connections>
+                        <outlet property="loginBox" destination="SQB-3O-JiB" id="qo3-Jl-13j"/>
                         <segue destination="7YP-55-ShM" kind="presentation" identifier="loginToHome" id="KzT-aL-xfH"/>
                     </connections>
                 </viewController>
@@ -112,6 +136,7 @@
                             <outlet property="delegate" destination="E4b-jM-2Sw" id="odo-6c-QnV"/>
                         </connections>
                     </tableView>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="Home" id="rsi-mD-0g3">
                         <barButtonItem key="leftBarButtonItem" title="Logout" id="jzr-H0-uM2">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -119,11 +144,66 @@
                                 <action selector="onLogout:" destination="E4b-jM-2Sw" id="Zs5-Od-iN3"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="edit-icon" id="qS3-QT-8yk">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="uPO-ud-5EL" kind="presentation" id="9Xe-bl-lDb"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RER-ay-aec" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="840.79999999999995" y="-743.47826086956525"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="ATh-zH-4aY">
+            <objects>
+                <viewController id="6Wn-ER-O2I" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="p0Z-fH-9Vl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8rV-PK-4Dj">
+                                <rect key="frame" x="8" y="8" width="359" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="250" constant="128" id="VeD-rb-Pqc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="8rV-PK-4Dj" firstAttribute="top" secondItem="CjL-at-aUS" secondAttribute="top" constant="8" id="e7n-nQ-ivm"/>
+                            <constraint firstItem="CjL-at-aUS" firstAttribute="trailing" secondItem="8rV-PK-4Dj" secondAttribute="trailing" constant="8" id="nsz-jZ-RCB"/>
+                            <constraint firstItem="8rV-PK-4Dj" firstAttribute="leading" secondItem="CjL-at-aUS" secondAttribute="leading" constant="8" id="ok3-bL-Fpb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="CjL-at-aUS"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="efA-eq-VLZ">
+                        <barButtonItem key="leftBarButtonItem" title="Close" image="close-icon" id="dpF-UC-kVj">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="close:" destination="6Wn-ER-O2I" id="R6Q-EZ-nfn"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" image="edit-icon" id="que-Ea-YEs">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="tweet:" destination="6Wn-ER-O2I" id="Gpa-zb-h3K"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="8rV-PK-4Dj" id="aLO-lc-kqt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tkh-0H-PUK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2600.8000000000002" y="-743.47826086956525"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="hK5-bl-WBz">
@@ -145,5 +225,29 @@
             </objects>
             <point key="canvasLocation" x="-112" y="-743"/>
         </scene>
+        <!--Tweet Navigation Controller-->
+        <scene sceneID="gzG-eV-eKU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uPO-ud-5EL" userLabel="Tweet Navigation Controller" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="cWi-Ox-aVp">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.2251579165" green="0.63001710180000003" blue="0.95047801730000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6Wn-ER-O2I" kind="relationship" relationship="rootViewController" id="x2w-T4-utO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g29-SC-Kh7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1661.5999999999999" y="-743.47826086956525"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="TwitterLogo" width="120" height="120"/>
+        <image name="close-icon" width="26" height="24"/>
+        <image name="edit-icon" width="30" height="27"/>
+    </resources>
 </document>
